--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- iOS touch icon -->
     <link rel="apple-touch-icon" href="icons/apple-touch-icon-180x180.png" />
 
-    <title>My 2D Game</title>
+    <title>2048</title>
     <style>
       :root {
         --safe-left: env(safe-area-inset-left);
